Closed
Bug 1505420
Opened 2 years ago
Closed 2 years ago
Assertion failure: parent->HasFirstLetterChild(), at /builds/worker/workspace/build/src/layout/base/nsCSSFrameConstructor.cpp:10669
Categories
(Core :: Layout, defect)
Core
Layout
Tracking
()
RESOLVED
FIXED
mozilla65
Tracking | Status | |
---|---|---|
firefox-esr60 | --- | unaffected |
firefox63 | --- | unaffected |
firefox64 | --- | wontfix |
firefox65 | --- | fixed |
People
(Reporter: jkratzer, Assigned: emilio)
References
(Blocks 1 open bug)
Details
(Keywords: assertion, testcase)
Attachments
(2 files)
Testcase found while fuzzing mozilla-central rev 957a743c4ca2. Assertion failure: parent->HasFirstLetterChild(), at /builds/worker/workspace/build/src/layout/base/nsCSSFrameConstructor.cpp:10669 rax = 0x0000000000000000 rdx = 0x0000000000000000 rcx = 0x0000000000000b40 rbx = 0x00007f690a404550 rsi = 0x00007f6924e078b0 rdi = 0x00007f6924e06680 rbp = 0x00007ffc0603b6e0 rsp = 0x00007ffc0603b6d0 r8 = 0x00007f6924e078b0 r9 = 0x00007f6925f78740 r10 = 0x0000000000000000 r11 = 0x0000000000000000 r12 = 0x0000000000000000 r13 = 0x00007f690a403d58 r14 = 0x00007f690a404300 r15 = 0x00007f690a414000 rip = 0x00007f69154a6901 OS|Linux|0.0.0 Linux 4.15.0-38-generic #41-Ubuntu SMP Wed Oct 10 10:59:38 UTC 2018 x86_64 CPU|amd64|family 6 model 78 stepping 3|1 GPU||| Crash|SIGSEGV /SEGV_MAPERR|0x0|0 0|0|libxul.so|ClearHasFirstLetterChildFrom|hg:hg.mozilla.org/mozilla-central:layout/base/nsCSSFrameConstructor.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|10666|0x1e 0|1|libxul.so|nsCSSFrameConstructor::RemoveFirstLetterFrames(nsIPresShell*, nsContainerFrame*, nsContainerFrame*, bool*)|hg:hg.mozilla.org/mozilla-central:layout/base/nsCSSFrameConstructor.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|10773|0x8 0|2|libxul.so|nsCSSFrameConstructor::RemoveFirstLetterFrames(nsIPresShell*, nsContainerFrame*, nsContainerFrame*, bool*)|hg:hg.mozilla.org/mozilla-central:layout/base/nsCSSFrameConstructor.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|10825|0x16 0|3|libxul.so|nsCSSFrameConstructor::RemoveLetterFrames(nsIPresShell*, nsContainerFrame*)|hg:hg.mozilla.org/mozilla-central:layout/base/nsCSSFrameConstructor.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|10849|0x14 0|4|libxul.so|nsCSSFrameConstructor::ContentRemoved(nsIContent*, nsIContent*, nsCSSFrameConstructor::RemoveFlags)|hg:hg.mozilla.org/mozilla-central:layout/base/nsCSSFrameConstructor.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|7909|0x12 0|5|libxul.so|mozilla::PresShell::ContentRemoved(nsIContent*, nsIContent*)|hg:hg.mozilla.org/mozilla-central:layout/base/PresShell.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|4597|0x11 0|6|libxul.so|nsNodeUtils::ContentRemoved(nsINode*, nsIContent*, nsIContent*)|hg:hg.mozilla.org/mozilla-central:dom/base/nsNodeUtils.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|230|0xf 0|7|libxul.so|nsINode::RemoveChildNode(nsIContent*, bool)|hg:hg.mozilla.org/mozilla-central:dom/base/nsINode.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|2042|0xe 0|8|libxul.so|nsContentUtils::SetNodeTextContent(nsIContent*, nsTSubstring<char16_t> const&, bool)|hg:hg.mozilla.org/mozilla-central:dom/base/nsContentUtils.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|5253|0x11 0|9|libxul.so|mozilla::dom::FragmentOrElement::SetTextContentInternal(nsTSubstring<char16_t> const&, nsIPrincipal*, mozilla::ErrorResult&)|hg:hg.mozilla.org/mozilla-central:dom/base/FragmentOrElement.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|1277|0x5 0|10|libxul.so|mozilla::dom::Node_Binding::set_textContent|hg:hg.mozilla.org/mozilla-central:dom/base/nsINode.h:957a743c4ca2907d8e357fce43fbcd9f619f1122|1348|0x9 0|11|libxul.so|bool mozilla::dom::binding_detail::GenericSetter<mozilla::dom::binding_detail::NormalThisPolicy>(JSContext*, unsigned int, JS::Value*)|hg:hg.mozilla.org/mozilla-central:dom/bindings/BindingUtils.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|3264|0x11 0|12|libxul.so|CallJSNative(JSContext*, bool (*)(JSContext*, unsigned int, JS::Value*), JS::CallArgs const&)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|468|0x3 0|13|libxul.so|js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|560|0xf 0|14|libxul.so|InternalCall|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|614|0xd 0|15|libxul.so|js::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, js::AnyInvokeArgs const&, JS::MutableHandle<JS::Value>)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|633|0x5 0|16|libxul.so|js::CallSetter(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, JS::Handle<JS::Value>)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|775|0x5 0|17|libxul.so|SetExistingProperty|hg:hg.mozilla.org/mozilla-central:js/src/vm/NativeObject.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|3016|0x8 0|18|libxul.so|bool js::NativeSetProperty<(js::QualifiedBool)1>(JSContext*, JS::Handle<js::NativeObject*>, JS::Handle<jsid>, JS::Handle<JS::Value>, JS::Handle<JS::Value>, JS::ObjectOpResult&)|hg:hg.mozilla.org/mozilla-central:js/src/vm/NativeObject.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|3046|0x2d 0|19|libxul.so|js::SetProperty(JSContext*, JS::Handle<JSObject*>, JS::Handle<jsid>, JS::Handle<JS::Value>, JS::Handle<JS::Value>, JS::ObjectOpResult&)|hg:hg.mozilla.org/mozilla-central:js/src/vm/ObjectOperations-inl.h:957a743c4ca2907d8e357fce43fbcd9f619f1122|298|0x34 0|20|libxul.so|Interpret|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|277|0x24 0|21|libxul.so|js::RunScript(JSContext*, js::RunState&)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|447|0xb 0|22|libxul.so|js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|587|0xf 0|23|libxul.so|InternalCall|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|614|0xd 0|24|libxul.so|js::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, js::AnyInvokeArgs const&, JS::MutableHandle<JS::Value>)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|633|0x5 0|25|libxul.so|JS::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, JS::HandleValueArray const&, JS::MutableHandle<JS::Value>)|hg:hg.mozilla.org/mozilla-central:js/src/jsapi.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|2975|0x1c 0|26|libxul.so|mozilla::dom::EventListener::HandleEvent(JSContext*, JS::Handle<JS::Value>, mozilla::dom::Event&, mozilla::ErrorResult&)|s3:gecko-generated-sources:b504f583ed3111ab416617cd63caa012e7478d0516eb5d3bc3cd43cef007715c1a91854c0528b0ec8e85f6341ccebf73a1b2c32556687ebaf4023e3c38ff4197/dom/bindings/EventListenerBinding.cpp:|52|0x5 0|27|libxul.so|void mozilla::dom::EventListener::HandleEvent<mozilla::dom::EventTarget*>(mozilla::dom::EventTarget* const&, mozilla::dom::Event&, mozilla::ErrorResult&, char const*, mozilla::dom::CallbackObject::ExceptionHandling, JS::Realm*)|s3:gecko-generated-sources:f3d9c01258576daaac3afc4fb3b283652e7f1168abb5287eff6775451ebd0ab6a0e4c8d88d3a67f7147042501bc091c6dfed25b4b8ccf4e4f420897b8d0ba906/dist/include/mozilla/dom/EventListenerBinding.h:|66|0x1c 0|28|libxul.so|mozilla::EventListenerManager::HandleEventSubType(mozilla::EventListenerManager::Listener*, mozilla::dom::Event*, mozilla::dom::EventTarget*)|hg:hg.mozilla.org/mozilla-central:dom/events/EventListenerManager.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|1104|0x26 0|29|libxul.so|mozilla::EventListenerManager::HandleEventInternal(nsPresContext*, mozilla::WidgetEvent*, mozilla::dom::Event**, mozilla::dom::EventTarget*, nsEventStatus*, bool)|hg:hg.mozilla.org/mozilla-central:dom/events/EventListenerManager.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|1309|0x16 0|30|libxul.so|mozilla::EventTargetChainItem::HandleEvent(mozilla::EventChainPostVisitor&, mozilla::ELMCreationDetector&)|hg:hg.mozilla.org/mozilla-central:dom/events/EventListenerManager.h:957a743c4ca2907d8e357fce43fbcd9f619f1122|391|0x6 0|31|libxul.so|mozilla::EventTargetChainItem::HandleEventTargetChain(nsTArray<mozilla::EventTargetChainItem>&, mozilla::EventChainPostVisitor&, mozilla::EventDispatchingCallback*, mozilla::ELMCreationDetector&)|hg:hg.mozilla.org/mozilla-central:dom/events/EventDispatcher.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|677|0x12 0|32|libxul.so|mozilla::EventDispatcher::Dispatch(nsISupports*, nsPresContext*, mozilla::WidgetEvent*, mozilla::dom::Event*, nsEventStatus*, mozilla::EventDispatchingCallback*, nsTArray<mozilla::dom::EventTarget*>*)|hg:hg.mozilla.org/mozilla-central:dom/events/EventDispatcher.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|1157|0x1a 0|33|libxul.so|mozilla::EventDispatcher::DispatchDOMEvent(nsISupports*, mozilla::WidgetEvent*, mozilla::dom::Event*, nsPresContext*, nsEventStatus*)|hg:hg.mozilla.org/mozilla-central:dom/events/EventDispatcher.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|1241|0x19 0|34|libxul.so|nsINode::DispatchEvent(mozilla::dom::Event&, mozilla::dom::CallerType, mozilla::ErrorResult&)|hg:hg.mozilla.org/mozilla-central:dom/base/nsINode.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|1142|0x5 0|35|libxul.so|mozilla::dom::EventTarget::DispatchEvent(mozilla::dom::Event&)|hg:hg.mozilla.org/mozilla-central:dom/events/EventTarget.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|205|0x12 0|36|libxul.so|mozilla::AsyncEventDispatcher::Run()|hg:hg.mozilla.org/mozilla-central:dom/events/AsyncEventDispatcher.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|72|0x13 0|37|libxul.so|nsContentUtils::RemoveScriptBlocker()|hg:hg.mozilla.org/mozilla-central:dom/base/nsContentUtils.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|5572|0xe 0|38|libxul.so|nsDocument::EndUpdate()|hg:hg.mozilla.org/mozilla-central:dom/base/nsDocument.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|5115|0x5 0|39|libxul.so|nsHTMLDocument::EndUpdate()|hg:hg.mozilla.org/mozilla-central:dom/html/nsHTMLDocument.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|2172|0x5 0|40|libxul.so|mozAutoDocUpdate::~mozAutoDocUpdate()|hg:hg.mozilla.org/mozilla-central:dom/base/mozAutoDocUpdate.h:957a743c4ca2907d8e357fce43fbcd9f619f1122|37|0x11 0|41|libxul.so|mozilla::dom::Element::SetAttr(int, nsAtom*, nsAtom*, nsTSubstring<char16_t> const&, nsIPrincipal*, bool)|hg:hg.mozilla.org/mozilla-central:dom/base/Element.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|2628|0x9 0|42|libxul.so|mozilla::dom::HTMLElement_Binding::set_title|hg:hg.mozilla.org/mozilla-central:dom/base/Element.h:957a743c4ca2907d8e357fce43fbcd9f619f1122|865|0x26 0|43|libxul.so|bool mozilla::dom::binding_detail::GenericSetter<mozilla::dom::binding_detail::NormalThisPolicy>(JSContext*, unsigned int, JS::Value*)|hg:hg.mozilla.org/mozilla-central:dom/bindings/BindingUtils.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|3264|0x11 0|44|libxul.so|CallJSNative(JSContext*, bool (*)(JSContext*, unsigned int, JS::Value*), JS::CallArgs const&)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|468|0x3 0|45|libxul.so|js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|560|0xf 0|46|libxul.so|InternalCall|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|614|0xd 0|47|libxul.so|js::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, js::AnyInvokeArgs const&, JS::MutableHandle<JS::Value>)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|633|0x5 0|48|libxul.so|js::CallSetter(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, JS::Handle<JS::Value>)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|775|0x5 0|49|libxul.so|SetExistingProperty|hg:hg.mozilla.org/mozilla-central:js/src/vm/NativeObject.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|3016|0x8 0|50|libxul.so|bool js::NativeSetProperty<(js::QualifiedBool)1>(JSContext*, JS::Handle<js::NativeObject*>, JS::Handle<jsid>, JS::Handle<JS::Value>, JS::Handle<JS::Value>, JS::ObjectOpResult&)|hg:hg.mozilla.org/mozilla-central:js/src/vm/NativeObject.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|3046|0x2d 0|51|libxul.so|js::SetProperty(JSContext*, JS::Handle<JSObject*>, JS::Handle<jsid>, JS::Handle<JS::Value>, JS::Handle<JS::Value>, JS::ObjectOpResult&)|hg:hg.mozilla.org/mozilla-central:js/src/vm/ObjectOperations-inl.h:957a743c4ca2907d8e357fce43fbcd9f619f1122|298|0x34 0|52|libxul.so|Interpret|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|277|0x24 0|53|libxul.so|js::RunScript(JSContext*, js::RunState&)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|447|0xb 0|54|libxul.so|js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|587|0xf 0|55|libxul.so|InternalCall|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|614|0xd 0|56|libxul.so|js::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, js::AnyInvokeArgs const&, JS::MutableHandle<JS::Value>)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|633|0x5 0|57|libxul.so|JS::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, JS::HandleValueArray const&, JS::MutableHandle<JS::Value>)|hg:hg.mozilla.org/mozilla-central:js/src/jsapi.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|2975|0x1c 0|58|libxul.so|mozilla::dom::Function::Call(JSContext*, JS::Handle<JS::Value>, nsTArray<JS::Value> const&, JS::MutableHandle<JS::Value>, mozilla::ErrorResult&)|s3:gecko-generated-sources:8608c2289a1d9871b163cf64eb28fe0535b7c0d76562f972c9fc16519592354acf8928f3a87d7291ad2787d69def3a71373afde07f5a14adfa582e642eb71bd4/dom/bindings/FunctionBinding.cpp:|41|0x5 0|59|libxul.so|nsGlobalWindowInner::RunTimeoutHandler(mozilla::dom::Timeout*, nsIScriptContext*)|s3:gecko-generated-sources:22d0e043233e792b3171635349a7c96c260b02daf1d3a3863f1117e8ce67835c880f3e1615498f0338066a4757ac95face8a6a3a49bfe840d14f59c75432afce/dist/include/mozilla/dom/FunctionBinding.h:|73|0x23 0|60|libxul.so|mozilla::dom::TimeoutManager::RunTimeout(mozilla::TimeStamp const&, mozilla::TimeStamp const&)|hg:hg.mozilla.org/mozilla-central:dom/base/TimeoutManager.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|837|0xc 0|61|libxul.so|mozilla::dom::TimeoutExecutor::MaybeExecute()|hg:hg.mozilla.org/mozilla-central:dom/base/TimeoutExecutor.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|168|0xf 0|62|libxul.so|mozilla::dom::TimeoutExecutor::Run()|hg:hg.mozilla.org/mozilla-central:dom/base/TimeoutExecutor.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|225|0x5 0|63|libxul.so|mozilla::ThrottledEventQueue::Inner::ExecuteRunnable()|hg:hg.mozilla.org/mozilla-central:xpcom/threads/ThrottledEventQueue.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|249|0x11 0|64|libxul.so|mozilla::ThrottledEventQueue::Inner::Executor::Run()|hg:hg.mozilla.org/mozilla-central:xpcom/threads/ThrottledEventQueue.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|84|0xd 0|65|libxul.so|mozilla::SchedulerGroup::Runnable::Run()|hg:hg.mozilla.org/mozilla-central:xpcom/threads/SchedulerGroup.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|337|0x15 0|66|libxul.so|nsThread::ProcessNextEvent(bool, bool*)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThread.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|1246|0x15 0|67|libxul.so|NS_ProcessNextEvent(nsIThread*, bool)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThreadUtils.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|530|0x11 0|68|libxul.so|mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*)|hg:hg.mozilla.org/mozilla-central:ipc/glue/MessagePump.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|97|0xa 0|69|libxul.so|MessageLoop::RunInternal()|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:957a743c4ca2907d8e357fce43fbcd9f619f1122|325|0x17 0|70|libxul.so|MessageLoop::Run()|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:957a743c4ca2907d8e357fce43fbcd9f619f1122|318|0x8 0|71|libxul.so|nsBaseAppShell::Run()|hg:hg.mozilla.org/mozilla-central:widget/nsBaseAppShell.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|158|0xd 0|72|libxul.so|XRE_RunAppShell()|hg:hg.mozilla.org/mozilla-central:toolkit/xre/nsEmbedFunctions.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|939|0x11 0|73|libxul.so|mozilla::ipc::MessagePumpForChildProcess::Run(base::MessagePump::Delegate*)|hg:hg.mozilla.org/mozilla-central:ipc/glue/MessagePump.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|269|0x5 0|74|libxul.so|MessageLoop::RunInternal()|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:957a743c4ca2907d8e357fce43fbcd9f619f1122|325|0x17 0|75|libxul.so|MessageLoop::Run()|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:957a743c4ca2907d8e357fce43fbcd9f619f1122|318|0x8 0|76|libxul.so|XRE_InitChildProcess(int, char**, XREChildData const*)|hg:hg.mozilla.org/mozilla-central:toolkit/xre/nsEmbedFunctions.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|765|0x8 0|77|firefox-bin|content_process_main(mozilla::Bootstrap*, int, char**)|hg:hg.mozilla.org/mozilla-central:ipc/contentproc/plugin-container.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|50|0x14 0|78|firefox-bin|main|hg:hg.mozilla.org/mozilla-central:browser/app/nsBrowserApp.cpp:957a743c4ca2907d8e357fce43fbcd9f619f1122|301|0x11 0|79|libc-2.27.so||||0x21b97 0|80|firefox-bin|MOZ_ReportAssertionFailure|hg:hg.mozilla.org/mozilla-central:mfbt/Assertions.h:957a743c4ca2907d8e357fce43fbcd9f619f1122|164|0x5
Flags: in-testsuite?
Assignee | ||
Updated•2 years ago
|
Flags: needinfo?(emilio)
Assignee | ||
Comment 1•2 years ago
|
||
Since the first-line could've been pushed to another column.
Assignee | ||
Updated•2 years ago
|
Assignee: nobody → emilio
Status: NEW → ASSIGNED
Flags: needinfo?(emilio)
Pushed by emilio@crisal.io: https://hg.mozilla.org/integration/autoland/rev/de799bed6760 Remove the first-letter bit from the first-line parent's first continuation. r=bzbarsky
Comment 3•2 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/de799bed6760
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
Updated•2 years ago
|
status-firefox63:
--- → unaffected
status-firefox64:
--- → wontfix
status-firefox-esr60:
--- → unaffected
Flags: in-testsuite? → in-testsuite+
You need to log in
before you can comment on or make changes to this bug.
Description
•