Bug 1505420 - Remove the first-letter bit from the first-line parent's first continuation. r=bzbarsky

Since the first-line could've been pushed to another column.

Differential Revision: https://phabricator.services.mozilla.com/D11352